import VTimer from '~/components/molecules/VTimer'

export default {
  title: `molecules|VTimer`
}

export const def = () => ({
  components: { VTimer },
  template: ''
})
