// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|VTimer Def 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-content"
      style="padding: 64px 0px 0px 0px;"
    >
      <div
        class="v-content__wrap"
      >
        <v-time
          value="30"
        />
      </div>
    </main>
  </div>
</div>
`;

exports[`Storyshots molecules|VTimer Props Count 1`] = `
<div
  class="v-application v-application--is-ltr theme--light"
  data-app="true"
  id="app"
>
  <div
    class="v-application--wrap"
  >
    <main
      class="v-content"
      style="padding: 64px 0px 0px 0px;"
    >
      <div
        class="v-content__wrap"
      >
        <v-time
          value="10"
        />
      </div>
    </main>
  </div>
</div>
`;
